[RESTEASY-2886] Add the JDK module options required for Java 16+. Upgrade the version of Jetty used for the MicroProfile TCK and modify the timeout for Java 16+.
https://issues.redhat.com/browse/RESTEASY-2886