@@ -171,6 +171,20 @@
             </build>
       </profile>
       <profile>
+          <id>modular.jvm</id>
+          <activation>
+              <jdk>[9,)</jdk>
+          </activation>
+          <properties>
+              <modular.jdk.args>
+                  --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                  --add-modules=java.se
+                  --add-opens=java.base/java.util=ALL-UNNAMED
+                  --add-opens=java.base/java.security=ALL-UNNAMED
+              </modular.jdk.args>
+          </properties>
+      </profile>
+      <profile>
           <id>github-actions</id>
           <activation>
               <property>
